# Higgs-Audio-v3-Studio

./: CMakeLists.txt  HIGGS_CPP_PORT_OPTIMIZATION_HANDOFF.md  LICENSE  LINUX_PLAN.md  README.md  README_ZH.md
.github/workflows/: desktop-ci.yml  linux-build.yml  linux-desktop-ci.yml  mac-build.yml  windows-build.yml
app/cli/: main.cpp
app/desktop_api/: CMakeLists.txt  audiocpp_api.cpp  audiocpp_api.h
desktop/: .gitignore  ROADMAP_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: apiExamples.ts  audio.ts  config.ts  dom.ts  main.ts  referenceRecorder.ts  referenceTrimmer.ts  storage.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/api-console/: higgs-console.html
desktop/src-tauri/resources/engine/: README.txt
desktop/src-tauri/src/: audio.rs  download.rs  engine.rs  lib.rs  main.rs  recorder.rs  storage.rs
desktop/src/types/: lamejs.d.ts
include/engine/framework/runtime/: session.h
include/engine/framework/text/: chunking.h
include/engine/models/higgs_tts/: codec.h  generator.h  session.h
scripts/: build_windows.ps1  package_windows_release.ps1
src/framework/runtime/: kv_cache.cpp  session.cpp
src/framework/text/: chunking.cpp
src/models/chatterbox/: session.cpp
src/models/higgs_tts/: assets.cpp  codec.cpp  generator.cpp  loader.cpp  session.cpp
src/models/vevo2/: ar.cpp  session.cpp
tests/higgs_tts/: higgs_tts_warm_bench.cpp
tools/: quantize_safetensors.cpp
(+1 files in other folders)
